--- a/markaspot.info.yml
+++ b/markaspot.info.yml
@@ -34,6 +34,7 @@ dependencies:
   - help
   - history
   - image
+  - image_effects
   - markaspot_article
   - markaspot_blocks
   - markaspot_comment
