--- a/config/install/views.view.requests.yml
+++ b/config/install/views.view.requests.yml
@@ -46,7 +46,7 @@ display:
         type: bef
         options:
           submit_button: Apply
-          reset_button: 0
+          reset_button: 1
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: 1
@@ -59,6 +59,23 @@ display:
             search_api_fulltext:
               bef_format: default
               more_options:
+                is_secondary: 0
+                rewrite:
+                  filter_rewrite_values: ''
+            field_category:
+              bef_format: default
+              more_options:
+                bef_select_all_none: false
+                bef_collapsible: 0
+                is_secondary: 0
+                rewrite:
+                  filter_rewrite_values: ''
+            field_status_term:
+              bef_format: default
+              more_options:
+                bef_select_all_none: false
+                bef_select_all_none_nested: 0
+                bef_collapsible: 0
                 is_secondary: 0
                 rewrite:
                   filter_rewrite_values: ''
@@ -265,10 +282,10 @@ display:
           hierarchy: false
           error_message: true
           plugin_id: search_api_term
-        field_status:
-          id: field_status
+        field_status_term:
+          id: field_status_term
           table: search_api_index_service_requests
-          field: field_status
+          field: field_status_term
           relationship: none
           group_type: group
           admin_label: ''
@@ -277,12 +294,12 @@ display:
           group: 1
           exposed: true
           expose:
-            operator_id: field_status_op
+            operator_id: field_status_term_op
             label: Status
             description: ''
             use_operator: false
-            operator: field_status_op
-            identifier: field_status
+            operator: field_status_term_op
+            identifier: field_status_term
             required: false
             remember: false
             multiple: false
@@ -290,6 +307,8 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              moderator: '0'
+              editorial_board: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -307,7 +326,7 @@ display:
           type: select
           limit: true
           vid: service_status
-          hierarchy: false
+          hierarchy: true
           error_message: true
           plugin_id: search_api_term
       sorts:
