Update script property.

--- a/composer.json
+++ b/composer.json
@@ -312,7 +312,11 @@
   "prefer-stable": true,
   "scripts": {
     "post-install-cmd": [
+      "PhantomInstaller\\Installer::installPhantomJS",
       "@composer drupal-scaffold"
+    ],
+    "post-update-cmd": [
+      "@composer package"
     ],
     "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
   },
