--- a/composer.json
+++ b/composer.json
@@ -254,17 +254,7 @@
     "mikey179/vfsStream": "~1.2",
     "phpunit/phpunit": "~4.8",
     "symfony/css-selector": "~2.8",
-    "drush/drush": "8.1.10",
-    "drupal/drupal-extension": "^3.2",
-    "behat/behat": "^3.0",
-    "drupal/coder": "^2.0",
-    "phing/phing": "^2.14",
-    "drupal/devel": "^1.0",
-    "squizlabs/php_codesniffer": "2.*",
-    "se/selenium-server-standalone": "^2.53",
-    "drupal/console": "^1.0",
-    "jakoch/phantomjs-installer": "1.9.8",
-    "composer/composer": "^1.4"
+    "drupal/drupal-extension": "^3.2"
   },
   "require": {
     "composer/installers": "^1.2",
