--- a/composer.json
+++ b/composer.json
@@ -253,8 +253,7 @@
     "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
     "mikey179/vfsStream": "~1.2",
     "phpunit/phpunit": "~4.8",
-    "symfony/css-selector": "~2.8",
-    "drupal/drupal-extension": "^3.2"
+    "symfony/css-selector": "~2.8"
   },
   "require": {
     "composer/installers": "^1.2",
