Switch contrib to release versions.

--- a/composer.json
+++ b/composer.json
@@ -266,11 +266,11 @@
     "drupal/features": "3.0-beta9",
     "drupal/core": "8.3.1",
     "drupal/radix": "3.x-dev",
-    "drupal/pathauto": "1.x-dev",
-    "drupal/admin_toolbar": "1.x-dev",
+    "drupal/pathauto": "8.1.0-rc1",
+    "drupal/admin_toolbar": "8.1.19",
     "drupal/restui": "1.x-dev",
-    "drupal/token": "1.0-beta2",
-    "drupal/shariff": "1.0",
+    "drupal/token": "8.1.0-rc1",
+    "drupal/shariff": "1.1",
     "drupal/r4032login": "dev-1.x",
     "drupal/message": "1.0-alpha1",
     "drupal/views_bootstrap": "3.x-dev",
@@ -279,7 +279,7 @@
     "drupal/image_effects": "1.x-dev",
     "drupal/paragraphs": "1.x-dev",
     "drupal/diff": "1.x-dev",
-    "drupal/field_group": "1.x-dev",
+    "drupal/field_group": "1.0.0-rc6",
     "drupal/facets": "1.x-dev",
     "drupal/form_mode_manager": "1.x-dev",
     "drupal/geolocation": "1.x-dev",
