Try different version strings for drupal contrib modules

--- a/composer.json
+++ b/composer.json
@@ -266,10 +266,10 @@
     "drupal/features": "3.0-beta9",
     "drupal/core": "8.3.1",
     "drupal/radix": "3.x-dev",
-    "drupal/pathauto": "8.1.0-rc1",
+    "drupal/pathauto": "8.1.0rc1",
     "drupal/admin_toolbar": "8.1.19",
     "drupal/restui": "1.x-dev",
-    "drupal/token": "8.1.0-rc1",
+    "drupal/token": "8.1.0rc1",
     "drupal/shariff": "1.1",
     "drupal/r4032login": "dev-1.x",
     "drupal/message": "1.0-alpha1",
