--- a/composer.json
+++ b/composer.json
@@ -258,7 +258,7 @@
     "markaspot/markaspot_static_json": "dev-master",
     "markaspot/markaspot_map": "dev-8.x-3.x",
     "markaspot/markaspot_features": "dev-master",
-    "markaspot/markaspot_validation": "dev-master",
+    "markaspot/markaspot_validation": "~8.3",
     "markaspot/markaspot_default_content": "dev-master",
     "markaspot/service_request": "dev-master",
     "markaspot/masradix": "dev-master",
