--- a/composer.json
+++ b/composer.json
@@ -251,17 +251,17 @@
     "drupal-composer/drupal-scaffold": "^2.2",
     "cweagans/composer-patches": "~1.0",
     "drush/drush": "~8.0",
-    "markaspot/markaspot_open311": "dev-8.x-3.x",
-    "markaspot/markaspot_blocks": "dev-master",
-    "markaspot/markaspot_uuid": "dev-master",
-    "markaspot/markaspot_ui": "dev-master",
-    "markaspot/markaspot_static_json": "dev-master",
-    "markaspot/markaspot_map": "dev-8.x-3.x",
-    "markaspot/markaspot_features": "dev-master",
+    "markaspot/markaspot_open311": "~8.3",
+    "markaspot/markaspot_blocks": "~8.3",
+    "markaspot/markaspot_uuid": "~8.3",
+    "markaspot/markaspot_ui": "~8.3",
+    "markaspot/markaspot_static_json": "~8.3",
+    "markaspot/markaspot_map": "~8.3",
+    "markaspot/markaspot_features": "~8.3",
     "markaspot/markaspot_validation": "~8.3",
-    "markaspot/markaspot_default_content": "dev-master",
-    "markaspot/service_request": "dev-master",
-    "markaspot/masradix": "dev-master",
+    "markaspot/markaspot_default_content": "~8.3",
+    "markaspot/service_request": "~8.3",
+    "markaspot/masradix": "~8.3",
     "drupal/address": "1.0.0-rc3",
     "drupal/features": "3.0-beta9",
     "drupal/core": "8.3.*",
