Add new custom token module, close markaspot/mark-a-spot#54

--- a/composer.json
+++ b/composer.json
@@ -259,6 +259,7 @@
     "markaspot/markaspot_map": ">8@dev",
     "markaspot/markaspot_features": ">8@dev",
     "markaspot/markaspot_validation": ">8@dev",
+    "markaspot/markaspot_token": ">8@dev",
     "markaspot/markaspot_default_content": ">8@dev",
     "markaspot/service_request": ">8@dev",
     "markaspot/masradix": ">8@dev",
@@ -281,7 +282,7 @@
     "drupal/diff": "1.x-dev",
     "drupal/field_group": "1.*",
     "drupal/facets": "1.x-dev",
-    "drupal/form_mode_manager": "1.x-dev#f3b9c14b6b17f3bbd7d73dc0412039ced218bca3",
+    "drupal/form_mode_manager": "1.x-dev",
     "drupal/geolocation": "1.x-dev",
     "drupal/rules": "3.x-dev",
     "drupal/maillog": "1.x-dev",
