--- a/config/install/pathauto.pattern.requests.yml
+++ b/config/install/pathauto.pattern.requests.yml
@@ -3,10 +3,11 @@ status: true
 dependencies:
   module:
     - node
+    - markaspot_token
 id: requests
 label: requests
 type: 'canonical_entities:node'
-pattern: '/requests/[node:nid]'
+pattern: '/requests/[node:uuid]'
 selection_criteria:
   56a8d215-6a30-17841-8aad-8d2156a3045b10d8aadc7b7d069cb:
     id: node_type
