--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "drupal/markaspot",
   "description": "Installation profile of the Mark-a-Spot D8 Distribution",
   "type": "drupal-profile",
+  "license": "GPL-2.0+",
   "homepage": "https://github.com/markaspot/markaspot.git",
   "authors": [
     {
