--- a/composer.json
+++ b/composer.json
@@ -264,8 +264,8 @@
     "markaspot/markaspot_default_content": ">8@dev",
     "markaspot/service_request": ">8@dev",
     "markaspot/masradix": ">8@dev",
-    "drupal/address": "1.0.0-rc3",
-    "drupal/features": "3.0-beta9",
+    "drupal/address": "~1.0",
+    "drupal/features": "^3.0",
     "drupal/core": "8.3.*",
     "drupal/radix": "3.x-dev",
     "drupal/pathauto": "^1.0@RC",
