--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,8 @@
       "url": "https://packages.drupal.org/8"
     },
     {
-      "type": "package",
-      "package": {
-        "name": "leaflet-mas/leaflet",
-        "version": "1.0.3",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/Leaflet/Leaflet/archive/v1.0.3.zip",
-          "type": "zip"
-        }
-      }
+      "type": "composer",
+      "url": "https://asset-packagist.org"
     },
     {
       "type": "package",
@@ -55,30 +47,6 @@
     {
       "type": "package",
       "package": {
-        "name": "lvoogdt/leaflet-awesome-markers",
-        "version": "2.0.2",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/lvoogdt/Leaflet.awesome-markers/archive/v2.0.2.zip",
-          "type": "zip"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "leaflet/leaflet-fullscreen",
-        "version": "1.0.1",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/Leaflet/Leaflet.fullscreen/archive/v1.0.1.zip",
-          "type": "zip"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
         "name": "heiseonline/shariff",
         "version": "master",
         "type": "drupal-library",
@@ -92,126 +60,7 @@
       }
 
     },
-    {
-      "type": "package",
-      "package": {
-        "name": "perliedman/leaflet-control-geocoder",
-        "version": "1.5.3",
-        "dist": {
-          "type": "zip",
-          "url": "https://github.com/perliedman/leaflet-control-geocoder/archive/v1.5.3.zip"
-        },
-        "type": "drupal-library"
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "domoritz/leaflet-locatecontrol",
-        "version": "0.60.0",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/domoritz/leaflet-locatecontrol/archive/v0.60.0.zip",
-          "type": "zip"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "imakewebthings/waypoints",
-        "version": "4.0.0",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/imakewebthings/waypoints/archive/4.0.0.zip",
-          "type": "zip"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "socib/leaflet-timedimension",
-        "version": "1.1.0",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/socib/Leaflet.TimeDimension/archive/v1.1.0.zip",
-          "type": "zip"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "nezasa/iso8601-js-period",
-        "version": "0.2.0.0",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/nezasa/iso8601-js-period/archive/v0.2.0.0.zip",
-          "type": "zip"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "stevenLevithan/dateFormat",
-        "version": "1.2.3",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://gist.github.com/eralston/968809/archive/a18b38bede4e3d0e2f1c720bd1e4c010e646bb6d.zip",
-          "type": "zip"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "leaflet/leaflet-heat",
-        "version": "0.2.0",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/Leaflet/Leaflet.heat/archive/v0.2.0.zip",
-          "type": "zip"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "leaflet/leaflet-markercluster",
-        "version": "1.0.0",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/Leaflet/Leaflet.markercluster/archive/v1.0.0.zip",
-          "type": "zip"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "fortawesome-mas/font-awesome",
-        "version": "4.7.0",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/FortAwesome/Font-Awesome/archive/v4.7.0.zip",
-          "type": "zip"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "cliffcloud/leaflet-easyButton",
-        "version": "2.0.0",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/CliffCloud/Leaflet.EasyButton/archive/v2.0.0.zip",
-          "type": "zip"
-        }
-      }
-    },
+
     {
       "type": "package",
       "package": {
@@ -267,34 +116,33 @@
     "drupal/address": "~1.0",
     "drupal/features": "^3.0",
     "drupal/core": "8.4.*",
-    "drupal/radix": "3.x-dev",
+    "drupal/radix": "3.*",
     "drupal/pathauto": "^1.0@RC",
     "drupal/admin_toolbar": "1.*",
-    "drupal/restui": "1.x-dev",
+    "drupal/restui": "^1.15",
     "drupal/token": "1.*",
     "drupal/shariff": ">=1.1",
     "drupal/r4032login": "dev-1.x",
-    "drupal/views_bootstrap": "3.x-dev",
+    "drupal/views_bootstrap": "^3.0",
     "drupal/better_normalizers": "1.x-dev",
     "drupal/ctools": "3.x-dev",
     "drupal/image_effects": "1.x-dev",
-    "drupal/paragraphs": "1.x-dev",
-    "drupal/entity_reference_revisions": "1.x-dev",
-    "drupal/diff": "1.x-dev",
-    "drupal/field_group": "1.*",
-    "drupal/form_mode_manager": "1.x-dev",
-    "drupal/geolocation": "1.x-dev",
+    "drupal/paragraphs": "^1.2",
+    "drupal/entity_reference_revisions": "^1.3",
+    "drupal/diff": "^1.0",
+    "drupal/field_group": "^1.0",
+    "drupal/form_mode_manager": "^1.2",
+    "drupal/geolocation": "^1.11",
     "drupal/rules": "3.x-dev",
     "drupal/maillog": "1.x-dev",
     "drupal/fa_icon_class": "1.*",
     "drupal/services_api_key_auth": "1.*",
     "hubspot/pace": "0.7.5",
     "mango/slideout": "1.0.1",
-    "fortawesome-mas/font-awesome": "4.7.0",
     "heiseonline/shariff": "master"
   },
   "minimum-stability": "dev",
-  "prefer-stable": true,
+  "prefer-stable": false,
   "scripts": {
     "post-install-cmd": [
       "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
