--- a/composer.json
+++ b/composer.json
@@ -33,65 +33,6 @@
       }
     },
     {
-      "type": "package",
-      "package": {
-        "name": "mango/slideout",
-        "version": "v1.0.1",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/Mango/slideout/archive/v1.0.1.zip",
-          "type": "zip"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "heiseonline/shariff",
-        "version": "master",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/heiseonline/shariff/archive/master.zip",
-          "type": "zip"
-        },
-        "require": {
-          "composer/installers": "~1.0"
-        }
-      }
-
-    },
-
-    {
-      "type": "package",
-      "package": {
-        "name": "kartik-v/bootstrap-fileinput",
-        "version": "master",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/kartik-v/bootstrap-fileinput/archive/master.zip",
-          "type": "zip"
-        },
-        "require": {
-          "composer/installers": "~1.0"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "itsjavi/fontawesome-iconpicker",
-        "version": "1.22",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/itsjavi/fontawesome-iconpicker/archive/1.2.2.zip",
-          "type": "zip"
-        },
-        "require": {
-          "composer/installers": "~1.0"
-        }
-      }
-    },
-    {
       "type": "vcs",
       "url": "https://github.com/mishal/GeoPHP"
     }
@@ -137,9 +78,11 @@
     "drupal/maillog": "1.x-dev",
     "drupal/fa_icon_class": "1.*",
     "drupal/services_api_key_auth": "1.*",
-    "hubspot/pace": "0.7.5",
-    "mango/slideout": "1.0.1",
-    "heiseonline/shariff": "master"
+    "npm-asset/pace": "0.7.6",
+    "npm-asset/bootstrap-fileinput":"^4.4",
+    "npm-asset/npm-asset/fontawesome-iconpicker":"^1.3",
+    "npm-asset/slideout": "1.0.1",
+    "npm-asset/shariff": "2.0.4"
   },
   "minimum-stability": "dev",
   "prefer-stable": false,
