--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,7 @@
     "drupal/maillog": "1.x-dev",
     "drupal/fa_icon_class": "1.*",
     "drupal/services_api_key_auth": "1.*",
-    "npm-asset/pace": "0.7.6",
+    "bower-asset/pace": "0.7.6",
     "npm-asset/bootstrap-fileinput":"^4.4",
     "npm-asset/fontawesome-iconpicker":"^1.3",
     "npm-asset/slideout": "1.0.1",
