--- a/composer.json
+++ b/composer.json
@@ -81,11 +81,11 @@
     "bower-asset/pace": "0.7.6",
     "npm-asset/bootstrap-fileinput":"^4.4",
     "npm-asset/fontawesome-iconpicker":"^1.3",
-    "npm-asset/slideout": "1.0.1",
+    "npm-asset/slideout": "^1.0",
     "npm-asset/shariff": "2.0.4"
   },
   "minimum-stability": "dev",
-  "prefer-stable": false,
+  "prefer-stable": true,
   "scripts": {
     "post-install-cmd": [
       "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
