--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,7 @@
     "npm-asset/bootstrap-fileinput":"^4.4",
     "npm-asset/fontawesome-iconpicker":"^1.3",
     "npm-asset/slideout": "^1.0",
-    "npm-asset/shariff": "2.0.4"
+    "npm-asset/shariff": "dev-master"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
